# python-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  main.yml
