[tool.poetry]
authors = ["Nelson Lee <leelhn2345@outlook.com>"]
description = ""
name = "python-project-template"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
ipykernel = "^6.25.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
ignore = [
  "E501", # line too long
]
extend-select = [
  "I", # isort
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
  "F401", # unused import
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = 3.11
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
