[tool.poetry]
authors = ["Nelson Lee <leelhn2345@outlook.com>"]
description = ""
name = "python-project-template"
readme = "README.md"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
ipykernel = "^6.25.2"
mypy = "^1.10.0"
ruff = "^0.4.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff.lint]
ignore = [
  "E501", # line too long
]
extend-select = [
  "I",   # isort - sort imports
  "ARG", # flake8 - unused arguments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused import
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = true
