[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.8.0",
  "ruff>=0.6.1",
  "ipykernel>=6.29.5",
  "mypy>=1.11.1",
]

[tool.ruff.lint]
ignore = [
  "E501", # line too long
]
extend-select = [
  "I",   # isort - sort imports
  "ARG", # flake8 - unused arguments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused import
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = true
